# Video-Game-Recommender

./: CMakeLists.txt  Game.h  ParseData.cpp  ParseData.h  Similar.cpp  Similar.h  SortingAlgorithms.cpp  SortingAlgorithms.h  main.cpp
frontend/: index.html  index2.html  index3.html  style.css  style2.css  style3.css
